deployment-uself-agent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uself-agent
  namespace: ips-testing1
  labels:
    app: uself-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uself-agent
  template:
    metadata:
      labels:
        app: uself-agent
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: uself-agent
        image: harbor.tango.rid-intrasoft.eu/eviden/rd/uself/uself-agent:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service 
metadata:
  name: uself-agent
  namespace: ips-testing1
  labels:
    app: uself-agent
spec:
  selector:
    app: uself-agent
  type: NodePort
  ports:
  - port: 80
    targetPort: 8888
