redis-uself-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-uself-agent
  namespace: ips-testing1
spec:
  selector:
    app: redis-uself-agent
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-uself-agent
  namespace: ips-testing1
  labels:
    app: redis-uself-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-uself-agent
  template:
    metadata:
      labels:
        app: redis-uself-agent
    spec:
      containers:
      - name: redis-uself-agent    #hostname : ips-testing1.redis-uself-agent
        image: redis:alpine
        imagePullPolicy: Always
        ports: 
          - containerPort: 6379
      restartPolicy: Always
