service-uself-agent.yaml
apiVersion: v1
kind: Service 
metadata:
  name: uself-agent-service
  namespace: retail
  labels:
    app: uself-agent
spec:
  selector:
    app: uself-agent
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
